# tenable-mcp-mssp

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
simple_mcp/: __init__.py  account_capabilities.py  child_account_eligibility.py  child_api_keys.py  child_credentials.py  config.py  mssp_accounts.py  multi_child_tenable_mcp.py  server.py  single_child_tenable_mcp.py  tenable_client.py  tenable_mcp_client.py
tenable_mcp_mssp/: __init__.py  account_capabilities.py  bulk_vm_cve_query.py  bulk_vm_cve_query_worker.py  child_account_eligibility.py  child_api_keys.py  child_container_scope.py  child_credentials.py  child_fanout.py  config.py  logging_config.py  mssp_accounts.py  multi_child_tenable_mcp.py  server.py  single_child_tenable_mcp.py  tenable_client.py  tenable_mcp_client.py
tests/: test_account_capabilities.py  test_bulk_vm_cve_query.py  test_child_account_eligibility.py  test_child_api_keys.py  test_child_container_scope.py  test_child_credentials.py  test_config.py  test_logging_config.py  test_mssp_accounts.py  test_multi_child_tenable_mcp.py  test_server.py  test_single_child_tenable_mcp.py  test_tenable_mcp_client.py
