[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-mcp"
version = "0.1.0"
description = "A simple MCP server for listing Tenable MSSP child accounts."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.2.4",
    "pyTenable>=1.9.1",
]

[project.scripts]
simple-mcp = "simple_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["simple_mcp*"]
